# coco-uart

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
coco/: CMakeLists.txt  Uart.cpp  Uart.hpp
coco/native/coco/platform/: Uart_Win32.cpp  Uart_Win32.hpp  Uart_native.hpp
coco/nrf52/coco/platform/: Uart_UARTE_TIMER.cpp  Uart_UARTE_TIMER.hpp
coco/stm32/coco/platform/: Rs485_UART_DMA.cpp  Rs485_UART_DMA.hpp  Uart_UART_DMA.cpp  Uart_UART_DMA.hpp
test/: CMakeLists.txt  Rs485SendTest.cpp  Rs485WriteReadTest.cpp  UartEchoTest.cpp  UartSendTest.cpp  UartWriteReadTest.cpp
test/native/: UartSendTest.hpp
test/nrf52dongle/: UartSendTest.hpp
test/stm32f0discovery/: Rs485SendTest.hpp  UartSendTest.hpp
test/stm32f3348discovery/: UartSendTest.hpp
test/stm32g431nucleo/: Rs485SendTest.hpp  UartSendTest.hpp
test/stm32g474nucleo/: Rs485SendTest.hpp  Rs485WriteReadTest.hpp  UartSendTest.hpp  UartWriteReadTest.hpp
